# rust_daml

./: Cargo.toml  Makefile  build.rs
src/: main.rs
src/proto/: com.daml.ledger.api.v1.admin.rs  com.daml.ledger.api.v1.rs  com.daml.ledger.api.v1.testing.rs  google.rpc.rs
