[package]
name = "rust_daml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6.2", features = ["transport", "tls"] }
prost = "0.9"
tokio = { version = "1.0", features = ["full"] }
prost-types = "0.9.0"
tokio-rustls = "0.23.2"
http = "0.2.6"

[build-dependencies]
tonic-build = "0.6"
